@@ -84,6 +84,7 @@ EXTERN const char *hlf_names[] INIT( = {
   [HLF_BFOOTER] = "FloatFooter",
   [HLF_TS] = "StatusLineTerm",
   [HLF_TSNC] = "StatusLineTermNC",
+  [HLF_OK] = "OkMsg",
 });
 
 EXTERN int highlight_attr[HLF_COUNT];     // Highl. attr for each context.
